--- a/templates/search_form.html
+++ b/templates/search_form.html
@@ -112,6 +112,11 @@
     <div class="row g-2">
         {{ render_field(form.insolvent_only_search) }}
     </div>
+
+    <div class="row g-2">
+      {{ render_field(form.criminal_record_only_search) }}
+  </div>
+
     <div class="row g-2">
         {{ render_field(form.zapis_od) }}
     </div>
