add a feature to display the youngest registered persons

--- a/templates/trivia.html
+++ b/templates/trivia.html
@@ -12,6 +12,7 @@
 <p><a href="/most_common_activity">Seznam nejčastějších předmětů činnosti</a></p>
 <p><a href="/most_common_degree">Seznam nejčastějších titulů</a></p>
 <p><a href="/oldest_persons">Seznam nejstarších osob</a></p>
+<p><a href="/youngest_persons">Seznam nejmladších osob</a></p>
 <p><a href="/longest_registered_persons">Seznam nejdéle registrovaných osob</a></p>
 
 {% include 'footer.html' %}
